--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -13,3 +13,4 @@ pydantic-settings==2.2.1 # Pydantic'in settings yönetimi için gerekli
 # Google Gemini API
 google-generativeai==0.6.0 # Python client library for the Google Gemini API
 
+pyrebase kütüphanesi indirildi.
